# primitif

./: .gitignore  CMakeLists.txt  build.sh  compile.sh  compile_commands.json  kill.sh  main.c  run.sh
src/: electron.c  electron.h  globals.h  main.c
src/util/: circle.c  circle.h  force.c  force.h  util.c  util.h  velocity.h
